Fixed rendering bug on firefox

--- a/pages/websites/websites.styl
+++ b/pages/websites/websites.styl
@@ -14,6 +14,7 @@
 	transition opacity 200ms ease
 
 .website-image
+	width 100%
 	border-radius 3px
 
 .website-link
